sidebar and double scroll fix

--- a/app/assets/stylesheets/_general.sass
+++ b/app/assets/stylesheets/_general.sass
@@ -13,6 +13,8 @@ $red: #E54918
 
 body
   font-family: 'Roboto', sans-serif
+  &.overflow
+    overflow-y: hidden
 
 a
   display: block
@@ -191,12 +193,12 @@ a
 
 .side-bar
   position: fixed
-  top: 100px
+  top: 50px
   right: 0
   bottom: 0
   float: right
   min-height: calc(100vh - 100px)
-  width: 300px
+  width: 100%
   z-index: 5
   overflow-y: auto
   overflow-x: hidden
@@ -205,8 +207,10 @@ a
   &.opened
     +translate(0,0)
   @media #{$small-only}
-    right: 10px
-    +translate(120%,0)
+    right: 0
+    +translate(100%,0)
+  @media #{$medium-only}
+    width: 300px
   @media #{$large-up}
     position: relative
     display: block
@@ -223,11 +227,31 @@ a
   background-color: $dark-navy
   right: 0
   top: 80px
+  width: 35px
+  height: 40px
   cursor: pointer
   z-index: 10
-  border-radius: 10%
+  border-radius: 3px 0 0 3px
   line-height: 1
+  box-shadow: -1px 2px 4px rgba(0,0,0,0.3)
+  +transition(0.25s)
   svg
+    position: absolute
+    top: 7px
+    left: 5px
+    opacity: 0
     fill: white
+    width: 24px
+    height: 24px
+    +transition(0.25s)
+    &:first-child
+      opacity: 1
+  &.opened
+    background-color: $blue
+    svg
+      &:first-child
+        opacity: 0
+      &:nth-child(n+2)
+        opacity: 1
   @media #{$large-up}
     display: none
