--- a/app/assets/stylesheets/_page-main.sass
+++ b/app/assets/stylesheets/_page-main.sass
@@ -72,7 +72,7 @@
           color: $blue
     .diagrams
       position: relative
-      height: 400px
+      width: 100%
       margin-top: 30px
       .diagram
         display: none
@@ -83,6 +83,7 @@
         height: 100%
         &.active
           display: block
+          position: relative
 
   .production-container
     .map-container
@@ -155,11 +156,6 @@
           color: $blue
     .diagrams
       position: relative
-      height: 400px
       margin-top: 10px
       .diagram
-        position: absolute
-        top: 0
-        left: 0
-        width: 100%
-        height: 100%
+        position: relative
